[package]
name = "gud"
version = "0.1.3"
authors = ["ray33ee <30669752+ray33ee@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
lzma-rs = "0.1.3"
diffy = "0.2.1"
walkdir = "2.3.2"
zip = "0.5.12"
tar = "0.4.33"